Fixed padding and spacing issues in the portfolio page.

--- a/assets/css/portfoliopage_style.css
+++ b/assets/css/portfoliopage_style.css
@@ -17,6 +17,7 @@
     display: grid;
     align-content: flex-start;
     vertical-align: top;
+    padding-bottom: 35px;
 }
 
 #portfolio-content-inner {
